--- a/Extract_CS_Papers.ipynb
+++ b/Extract_CS_Papers.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,8 @@
     "import requests\n",
     "import io\n",
     "import re\n",
-    "from tqdm import tqdm  # Ensure proper import\n",
+    "import os\n",
+    "from tqdm import tqdm \n",
     "from datetime import datetime\n",
     "from concurrent.futures import ProcessPoolExecutor"
    ]
@@ -33,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ***Serial***"
+    "## ***Helper Functions & General Variables***"
    ]
   },
   {
@@ -43,27 +44,25 @@
    "outputs": [],
    "source": [
     "def download_pdf(paper_id):\n",
-    "    url = f\"https://arxiv.org/pdf/{paper_id}\"\n",
-    "    response = requests.get(url)\n",
+    "    response = requests.get(f\"https://arxiv.org/pdf/{paper_id}\")\n",
     "    if response.status_code == 200:\n",
     "        return io.BytesIO(response.content)\n",
     "    else:\n",
-    "        raise None #Exception(f\"Failed to download PDF. Status code: {response.status_code}\")\n",
+    "        #raise Exception(f\"Failed to download PDF. Status code: {response.status_code}\")\n",
+    "        return None \n",
     "\n",
-    "def extract_text_from_pdf(pdf_stream):\n",
-    "    if not pdf_stream:\n",
-    "        return None  # Failed to download\n",
-    "    \n",
+    "def extract_text_from_pdf(pdf):\n",
     "    try:\n",
-    "        doc = fitz.open(\"pdf\", pdf_stream)\n",
+    "        doc = fitz.open(\"pdf\", pdf)\n",
     "        text = \"\"\n",
     "        for page in doc:\n",
     "            text += page.get_text(\"text\") + \"\\n\"\n",
     "        return text if text.strip() else None  # Return None if empty\n",
-    "    except:\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Failed to extract text from {pdf}: {e}\")\n",
     "        return None  # Failed to extract text\n",
     "\n",
-    "def extract_introduction(text, word_limit=400):\n",
+    "def extract_introduction(text, word_limit=250):\n",
     "    lines = text.split(\"\\n\")\n",
     "    introduction_found = False\n",
     "    extracted_text = []\n",
@@ -76,7 +75,8 @@
     "            if section_pattern.match(line):\n",
     "                introduction_found = True\n",
     "        else:\n",
-    "            words = line.split()\n",
+    "            #words = line.split()\n",
+    "            words = re.findall(r\"\\b\\w+\\b\", line)\n",
     "            try:\n",
     "                if word_count + len(words) > word_limit:\n",
     "                    words = words[: word_limit - word_count]\n",
@@ -86,44 +86,12 @@
     "                    extracted_text.append(line)\n",
     "                    word_count += len(words)\n",
     "            except Exception:\n",
-    "                break  # Stop if an error occurs\n",
+    "                break  \n",
     "    \n",
     "    cleaned_text = re.sub(r'(\\w+)-\\s+(\\w+)', r'\\1\\2', \" \".join(extracted_text))\n",
     "    return cleaned_text.strip() if cleaned_text.strip() else None  # None if intro not found\n",
     "\n",
     "\n",
-    "\n",
-    "def process_pdf(paper_id):\n",
-    "    try:\n",
-    "        pdf_stream = download_pdf(paper_id)\n",
-    "        if not pdf_stream:\n",
-    "            print(f\"{paper_id} failed to download.\")\n",
-    "            return None\n",
-    "        \n",
-    "        #start_time = datetime.now()\n",
-    "        text = extract_text_from_pdf(pdf_stream)\n",
-    "        if text is None: \n",
-    "            print(f\"Failed to extract text from {paper_id}.\")\n",
-    "            return None\n",
-    "        \n",
-    "        introduction_text = extract_introduction(text)\n",
-    "        if introduction_text is None:\n",
-    "            print(f\"Failed to extract text from introduction sec. for {paper_id}.\")\n",
-    "            return None\n",
-    "        \n",
-    "        #end_time = datetime.now()\n",
-    "        #print((end_time - start_time).total_seconds())\n",
-    "        return introduction_text\n",
-    "    except Exception as e:\n",
-    "        return None #f\"Error: {str(e)}\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def update_output_file(output_file, successful_retries):\n",
     "    # Read the file into a list\n",
     "    with open(output_file, \"r\") as f:\n",
@@ -132,11 +100,20 @@
     "    # Update the correct indices\n",
     "    for index, new_text in successful_retries:\n",
     "        if 0 <= index < len(lines):  # Ensure index is valid\n",
-    "            lines[index] = new_text.strip() + \"\\n\\n\"  # Ensure proper formatting\n",
+    "            lines[index] = new_text.strip() + \"\\n\" \n",
     "    \n",
     "    # Write back the updated lines\n",
     "    with open(output_file, \"w\") as f:\n",
-    "        f.writelines(lines)\n"
+    "        f.writelines(lines)\n",
+    "\n",
+    "\n",
+    "def concatenate_files(file1, file2, output_file):\n",
+    "    with open(file1, 'r', encoding='utf-8') as f1, open(file2, 'r', encoding='utf-8') as f2, open(output_file, 'w', encoding='utf-8') as out:\n",
+    "        for line1, line2 in zip(f1, f2):\n",
+    "            if \"FAILED\" in line2:\n",
+    "                out.write(f\"{line1.strip()}\\n\")\n",
+    "            else:\n",
+    "                out.write(f\"{line1.strip()}. {line2.strip()}\\n\")"
    ]
   },
   {
@@ -145,7 +122,84 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "paper_ids = [\"0704.1274\", \"0704.1028\", \"0704.0954\", \"0704.1308\"]\n",
+    "id_file = \"graph-v2/Node_IDs.txt\"  # File containing one ID per line\n",
+    "\n",
+    "output_file = \"graph-v2/Additional_Node_Content.txt\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ***Serial***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to process PDFs stored in directories\n",
+    "def process_pdfs(pdf_dirs, results):\n",
+    "    successes = 0\n",
+    "    failures = []\n",
+    "\n",
+    "    for directory in pdf_dirs:\n",
+    "        for filename in os.listdir(directory):\n",
+    "            if filename.endswith(\".pdf\"):\n",
+    "                pdf_path = os.path.join(directory, filename)\n",
+    "\n",
+    "                text = extract_text_from_pdf(pdf_path)\n",
+    "                if text is None:\n",
+    "                    print(f\"Skipping {filename}: Failed to extract text\")\n",
+    "                    failures.append(filename.replace(\"_\", \"/\").replace(\".pdf\", \"\"))\n",
+    "                    continue\n",
+    "\n",
+    "                intro_text = extract_introduction(text)\n",
+    "                if intro_text is None:\n",
+    "                    print(f\"Skipping {filename}: No introduction found\")\n",
+    "                    failures.append(filename.replace(\"_\", \"/\").replace(\".pdf\", \"\"))\n",
+    "                    continue\n",
+    "\n",
+    "                results[filename.replace(\"_\", \"/\").replace(\".pdf\", \"\")] = intro_text\n",
+    "                successes += 1\n",
+    "                #print(f\"✅ Extracted Introduction from {filename}\")\n",
+    "\n",
+    "    return results, successes, failures  # Dictionary { \"filename.pdf\": \"Introduction text\" }\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Function to process individual papers\n",
+    "def process_pdf(paper_id):\n",
+    "    try:\n",
+    "        pdf_stream = download_pdf(paper_id)\n",
+    "        if not pdf_stream:\n",
+    "            print(f\"{paper_id} failed to download\")\n",
+    "            return None\n",
+    "        \n",
+    "        text = extract_text_from_pdf(pdf_stream)\n",
+    "        if text is None: \n",
+    "            print(f\"Failed to extract text from {paper_id}\")\n",
+    "            return None\n",
+    "        \n",
+    "        introduction_text = extract_introduction(text)\n",
+    "        if introduction_text is None:\n",
+    "            print(f\"Failed to extract text from introduction section for {paper_id}\")\n",
+    "            return None\n",
+    "        \n",
+    "        return introduction_text\n",
+    "    except Exception as e:\n",
+    "        return None #f\"Error: {str(e)}\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "paper_ids = [\"0704.1274\", \"0704.1028\", \"0704.0954\", \"0704.1308\"] # For selected papers\n",
     "successful_retries = []\n",
     "\n",
     "for paper_id in paper_ids: # for idx, paper_id in failed_papers[0]:\n",
@@ -154,7 +208,66 @@
     "        print(f\"\\n==================================================\")\n",
     "        print(intro_text)\n",
     "        print(f\"==================================================\\n\")\n",
-    "        #successful_retries.append((idx, intro_text))"
+    "        #successful_retries.append((idx, intro_text)) # \"successful_retries\" will be used with \"failed_papers\" "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pdf_dirs = ['Papers 1', 'Papers 2', 'Papers 3', 'Papers 4', 'Papers 5', 'Papers 6']\n",
+    "\n",
+    "results = {}\n",
+    "\n",
+    "with open(id_file, \"r\") as f:\n",
+    "    paper_ids = {line.strip() for line in f}  # Use a set for faster lookups\n",
+    "\n",
+    "for paper_id in paper_ids:\n",
+    "    results[paper_id] = \"FAILED\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "paper_ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results, successes, failures = process_pdfs(pdf_dirs, \"graph-v2/Node_IDs.txt\")\n",
+    "\n",
+    "print(f'Successes: {successes}. Failures: {len(failures)}. Node IDs: {len(paper_ids)}.')\n",
+    "\n",
+    "with open(output_file, \"w\", encoding='utf-8') as f:\n",
+    "    for filename, text in results.items():\n",
+    "        f.write(text + \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(failures)"
    ]
   },
   {
@@ -170,55 +283,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def download_pdf(paper_id):\n",
-    "    url = f\"https://arxiv.org/pdf/{paper_id}\"\n",
-    "    response = requests.get(url)\n",
-    "    if response.status_code == 200:\n",
-    "        return io.BytesIO(response.content)\n",
-    "    else:\n",
-    "        return None  # Indicate failure\n",
-    "\n",
-    "def extract_text_from_pdf(pdf_stream):\n",
-    "    if not pdf_stream:\n",
-    "        return None  # Failed to download\n",
-    "    \n",
-    "    try:\n",
-    "        doc = fitz.open(\"pdf\", pdf_stream)\n",
-    "        text = \"\"\n",
-    "        for page in doc:\n",
-    "            text += page.get_text(\"text\") + \"\\n\"\n",
-    "        return text if text.strip() else None  # Return None if empty\n",
-    "    except:\n",
-    "        return None  # Failed to extract text\n",
-    "\n",
-    "def extract_introduction(text, word_limit=500):\n",
-    "    lines = text.split(\"\\n\")\n",
-    "    introduction_found = False\n",
-    "    extracted_text = []\n",
-    "    word_count = 0\n",
-    "    \n",
-    "    section_pattern = re.compile(r'^\\s*(\\d+\\.?|[IVXLCDM]+\\.?|[A-Z]\\.?)\\s+(INTRODUCTION|Introduction)\\s*$')\n",
-    "    \n",
-    "    for line in lines:\n",
-    "        if not introduction_found:\n",
-    "            if section_pattern.match(line):\n",
-    "                introduction_found = True\n",
-    "        else:\n",
-    "            words = line.split()\n",
-    "            try:\n",
-    "                if word_count + len(words) > word_limit:\n",
-    "                    words = words[: word_limit - word_count]\n",
-    "                    extracted_text.append(\" \".join(words))\n",
-    "                    break\n",
-    "                else:\n",
-    "                    extracted_text.append(line)\n",
-    "                    word_count += len(words)\n",
-    "            except Exception:\n",
-    "                break  # Stop if an error occurs\n",
-    "    \n",
-    "    cleaned_text = re.sub(r'(\\w+)-\\s+(\\w+)', r'\\1\\2', \" \".join(extracted_text))\n",
-    "    return cleaned_text.strip() if cleaned_text.strip() else None  # None if intro not found\n",
-    "\n",
     "def process_range(paper_ids, start, end):\n",
     "    results = [(i, \"FAILED\") for i in range(start, end)]\n",
     "    failed_papers = [[] for _ in range(3)]  # Track failures: [download, extraction, introduction]\n",
@@ -268,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -280,6 +344,7 @@
     }
    ],
    "source": [
+    "# Create ranges\n",
     "num_ids = 52596\n",
     "batch_size = int(num_ids / 10)  \n",
     "\n",
@@ -302,9 +367,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "id_file = \"graph-v2/Node_IDs.txt\"  # File containing one ID per line\n",
-    "\n",
-    "output_file = \"graph-v2/Additional_Node_Content.txt\"\n",
     "failed_papers, results = process_papers_parallel(id_file, ranges, output_file)"
    ]
   },
@@ -315,8 +377,8 @@
    "outputs": [],
    "source": [
     "with open(output_file, \"w\", encoding='utf-8') as f:\n",
-    "        for text in results:\n",
-    "            f.write(text + \"\\n\")\n",
+    "    for text in results:\n",
+    "        f.write(text + \"\\n\")\n",
     "    \n",
     "with open(\"graph-v2/Failed_papers.txt\", \"w\") as f:\n",
     "    f.write(\"Failed Downloads:\\n\")\n",
@@ -328,28 +390,6 @@
     "    f.write(\"\\nFailed Introduction Detection:\\n\")\n",
     "    for idx, pid in failed_papers[2]:\n",
     "        f.write(f\"{idx}: {pid}\\n\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The function below concatenates the contents of a row from two files \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def concatenate_files(file1, file2, output_file):\n",
-    "    with open(file1, 'r', encoding='utf-8') as f1, open(file2, 'r', encoding='utf-8') as f2, open(output_file, 'w', encoding='utf-8') as out:\n",
-    "        for line1, line2 in zip(f1, f2):\n",
-    "            out.write(f\"{line1.strip()}. {line2.strip()}\\n\")\n",
-    "\n",
-    "# Example usage:\n",
-    "concatenate_files(\"graph-v2/data-v2.txt\", \"graph-v2/Additional_Node_Content.txt\", \"graph-v2/data-v4.txt\")"
    ]
   }
  ],
