--- a/Extract_CS_Papers.ipynb
+++ b/Extract_CS_Papers.ipynb
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
     "\n",
     "    with open(f'graph-v2/{txtf}', 'r', encoding='utf-8') as file:\n",
     "        for line in file:\n",
-    "            total_word_count += len(line.split())\n",
+    "            total_word_count += len(re.findall(r\"\\b\\w+\\b\", line)) # Get only the words from each line\n",
     "            total_lines += 1\n",
     "\n",
     "    mean_word_count = total_word_count / total_lines if total_lines > 0 else 0\n",
